# android-ndk-temple

./: CHANGELOG.md  Makefile  README.md  build.gradle  config.gradle  gradle.properties  settings.gradle  z-android-base.mk
demo/: .gitignore  build.gradle  z-demo.mk
demo/src/androidTest/java/com/sinlov/android/ndkmodule/demo/: ExampleInstrumentedTest.java
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/sinlov/android/ndkmodule/demo/: CopyActivity.java  MainActivity.java  MainActivityAbstract.java  MainActivityAdapter.java  MainActivityComponent.java  MainBizModules.java  MainBizService.java  MineApplication.java
demo/src/main/java/com/sinlov/temp/android/: AbsTemplateActivity.java
demo/src/main/java/com/sinlov/temp/android/utils/log/: LoggerPrintTree.java
demo/src/main/java/com/sinlov/temp/android/utils/widget/: UXUtils.java
demo/src/main/res/layout/: activity_copy.xml  main_profile.xml
demo/src/main/res/values/: strings.xml
demo/src/test/java/com/sinlov/android/ndkmodule/demo/: ExampleUnitTest.java  MainActivityTest.java
gradle/: 00-config.md  preface.md
gradle/maven/: nexusUpload-use.md  nexusUpload.gradle
ndkmodule/: .gitignore  build.gradle  gradle.properties  z-ndkmodule.mk
ndkmodule/src/main/: AndroidManifest.xml
ndkmodule/src/main/cpp/: CMakeLists.txt  ndkmodule.cpp  ndkmodule.h  ndkmoduleLog.cpp  ndkmoduleLog.h
ndkmodule/src/main/java/com/sinlov/android/ndkmodule/: Plugin.java
ndkmodule/src/test/java/com/sinlov/android/ndkmodule/: ExampleUnitTest.java  JsonConfigByAssetsTests.java  TestMockApplication.java
ndkmodule/src/test/java/temp/: RoboTemp.java
